--- a/max_cut_only_15q_background_results.ipynb
+++ b/max_cut_only_15q_background_results.ipynb
@@ -10,7 +10,6 @@
         "86H1ekQ9gI_8",
         "kxbANBKN4-I5",
         "4GqrhgSDgJAF",
-        "85GE9gMBgJAT",
         "P-nfLK1ijEBX",
         "3TPpoF6EgJAs",
         "UQSv6WsUgJA7",
@@ -431,6 +430,7 @@
         "seed = 19120623\n",
         "np.random.seed(seed)\n",
         "\n",
+        "#VGG: function adopted from the Rigetti's MaxCutQAOA.ipynb\n",
         "def generate_ising_graph(edges: List[Tuple[int, int]]) -> nx.Graph:\n",
         "    graph = nx.from_edgelist(edges)\n",
         "    weights:  np.ndarray = 2.0 * np.random.rand(graph.number_of_edges()) - 1.0\n",
